# insurance-miro

./: .env  .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile  README-EN.md  README.md  docker-compose.yml  package.json  pyproject.toml
backend/: pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  (+1 more)
data-sample/: README.md
docs/: current-architecture.md  insurance-simulator-refactor-plan.md  runtime-data-contracts.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
scripts/: dev-opencode-remote.sh  dev-opencode.sh  dev.sh  download_data_samples.sh  opencode-env.mjs  opencode-openai-proxy.mjs  run-opencode-serve.mjs  update_reference_mirofish.sh
social_actions/: 2026-04-09_post-10_comment-2.txt  2026-04-09_post-10_comment-3.txt  2026-04-09_post-10_comment.txt  2026-04-09_post-11_comment-2.txt  2026-04-09_post-11_comment-3.txt  2026-04-09_post-11_comment.txt  2026-04-09_post-11_share.txt  2026-04-09_post-12_comment-2.txt  2026-04-09_post-12_comment.txt  2026-04-09_post-12_share-2.txt  2026-04-09_post-12_share.txt  2026-04-09_post-13_comment-2.txt  2026-04-09_post-13_comment.txt  2026-04-09_post-13_share.txt  2026-04-09_post-14_comment.txt  2026-04-09_post-14_share.txt  2026-04-09_post-1_comment-2.txt  2026-04-09_post-1_comment.txt  2026-04-09_post-1_quote-share.txt  2026-04-09_post-1_share.txt  2026-04-09_post-2_comment-2.txt  2026-04-09_post-2_comment.txt  2026-04-09_post-2_share.txt  2026-04-09_post-3_comment-2.txt  2026-04-09_post-3_comment-3.txt  2026-04-09_post-3_comment-4.txt  2026-04-09_post-3_comment-5.txt  (+23 more)
(+89 files in other folders)
